Added the first version of feed
